[package]
name = "ipld-schema"
version = "0.2.0"
authors = ["Sage Mitchell <dev@mx00s.com>"]
edition = "2018"
description = "IPLD Schema tools"
repository = "https://github.com/mx00s/ipld-schema"
license = "MIT OR Apache-2.0"

[features]
fast-test = []
build-binary = []

[[bin]]
name = "ipld-schema"
path = "./src/cli.rs"
required-features = ["build-binary"]

[dependencies]
peg = "0.6.3"
serde = "1.0.118"

[dev-dependencies]
insta = "1.3.0"
pretty_assertions = "0.6.1"
proptest = "0.10.1"
serde_json = "1.0.61"
test-strategy = "0.1.1"
