[package]
name = "ipld-schema"
version = "0.3.2"
authors = ["Sage Mitchell <dev@mx00s.com>"]
edition = "2018"
description = "Generate and validate [IPLD Schemas](https://specs.ipld.io/schemas/) and the data they describe"
repository = "https://github.com/mx00s/ipld-schema"
license = "MIT OR Apache-2.0"

[features]
default = ["build-binary"]
fast-test = []
build-binary = ["structopt"]

[[bin]]
name = "ipld-schema"
path = "./src/cli.rs"
required-features = ["build-binary"]

[dependencies]
base64 = "0.13.0"
peg = "0.6.3"
proptest = "0.10.1"
rand = "0.8.4"  # intentionally not upgrading to avoid ./target/... path collision warning
serde = { version = "1.0.118", features = ["derive"] }
structopt = { version = "0.3.21", optional = true }
test-strategy = "0.1.1"

[dev-dependencies]
insta = "1.4.0"
pretty_assertions = "0.6.1"
serde_json = "1.0.61"
tempfile = "3.1.0"
